--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,7 +26,7 @@
        
        <div class="rt">
            <a href=""> <h3>Sign Up</h3>  </a>
-           <a href=""> <h3>Login</h3>    </a>
+           <a href=""> <h3>Sign In</h3>    </a>
 
            <% if (currentUser) {%>
             
