--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -47,34 +47,34 @@
   
         <div class="cards">
   
-            <a href="">
+            <!-- <a href="">
               <div class="box b-1">
                   <div class="in-cards">
                       <div>
                            <h3>Desserts</h3>
                      </div>
                  </div>
-             </div></a>
+             </div></a> -->
   
   
-             <a href="">
+             <!-- <a href="">
             <div class="box b-2">
                 <div class="in-cards">
                     <div>
                        <h3>Main Dishes</h3>
                    </div>
                </div>
-           </div></a>
+           </div></a> -->
   
   
-           <a href="">
+           <!-- <a href="">
            <div class="box b-3">
                <div class="in-cards">
                       <div>
                          <h3>Drinks</h3>
                       </div>
                </div>
-          </div></a>
+          </div></a> -->
   
   
           
