--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -57,14 +57,14 @@
   
              <a href="">
             <div class="box b-2">
-                <%-include('../views/mainDish/mainDev') %>
+                <%-include('/mainDish/mainDev') %>
 
            </div></a>
   
   
            <a href="">
            <div class="box b-3">
-            <%-include('../views/drinks/drinksDev') %>
+            <%-include('/drinks/drinksDev') %>
         </div></a>
   
   
