--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,7 +21,7 @@
 
     <nav>
         <div>
-            <h1>eastFood</h1>
+           <a href="/"> <h1>eastFood</h1></a>
        </div>
        
        <div class="rt">
@@ -40,38 +40,8 @@
        </div>
     </nav>
 
-    <div id="mid-section">
-        <div class="mid-section-header">
-           <h2>Menu</h2>
-        </div>
-  
-        <div class="cards">
-            
-            <a href="">
-              <div class="box b-1">
-                  
-                  <%-include('../views/desserts/dessertDev') %>
-                   
-             </div></a>
-  
-  
-             <a href="">
-            <div class="box b-2">
-                <%-include('/mainDish/mainDev') %>
-
-           </div></a>
-  
-  
-           <a href="">
-           <div class="box b-3">
-            <%-include('/drinks/drinksDev') %>
-        </div></a>
-  
-  
-          
-        </div> 
          <%-body%>
-      </div>
+
 
 
 
