--- a/views/drinks/drinksDev.ejs
+++ b/views/drinks/drinksDev.ejs
@@ -1,5 +1,52 @@
-<div class="in-cards">
-   <div>
-      <h3>Drinks</h3>
-   </div>
+<h1>Desserrs  Menu</h1>
+
+<div>
+    <div>
+        <img src="" alt="">
+        <h3>Pepsi</h3>
+        <h4>price: 0.5 BD </h4>
+
+    </div>
+    <div>
+      <img src="" alt="">
+      <h3>merinda Apple</h3>
+      <h4>price: 0.5 BD </h4>
+  </div>
+    <div>
+      <img src="" alt="">
+      <h3>merinda strawburry</h3>
+      <h4>price: 0.5 BD </h4>
+  </div>
+
+
+
+
+    <div>
+        <img src="" alt="">
+        <h3>merinda lemon</h3>
+        <h4>price: 0.500 BD</h4>
+
+    </div>
+    <div>
+        <img src="" alt="">
+        <h3>merinda orange</h3>
+        <h4>price: 1.800 BD</h4>
+
+    </div>
+    <div>
+      <img src="" alt="">
+      <h3>7UP</h3>
+      <h4>price: 0.500 BD</h4>
+  </div>
+
+  <div>
+   <img src="" alt="">
+   <h3>7UP diet</h3>
+   <h4>price: 0.500 BD</h4>
+</div>
+<div>
+   <img src="" alt="">
+   <h3>Pepsi diet</h3>
+   <h4>price: 0.500 BD</h4>
+</div>
 </div>
