added menu templates for drinks & desserts & main dishes.

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,36 +1,27 @@
-<h2>Create New Account </h2>
+<h2>Create New Account</h2>
 
 <form method="POST" action="/auth/signup">
-    <div>
-        <label>First Name</label>
-        <input type="text" name="firstName">
-    </div>
-    <div>
-        <label>Last Name</label>
-        <input type="text" name="lastName">
-    </div>
-    <div>
-        <label>Email Address</label>
-        <input type="email" name="emailAddress">
-    </div>
-    <div>
-        <label>Password</label>
-        <input type="password" name="password">
-    </div>
-   <div> 
-       <label>Delivery Address</label> 
-       <div>
-        <input type="text" name="Area">
-        <input type="number" name="HouseNumber">
-        <input type="number" name="block">
-        <input type="number" name="TheStreet">
-       </div>
-    </div>
-   
-    <div> 
-        <label>phone Number</label> 
-        <input type=" Number" name="phoneNumber">
-     </div>
-   
-    <input type="submit">
+  <div>
+    <label>First Name</label>
+    <input type="text" name="firstName" />
+  </div>
+  <div>
+    <label>Last Name</label>
+    <input type="text" name="lastName" />
+  </div>
+  <div>
+    <label>Email Address</label>
+    <input type="email" name="emailAddress" />
+  </div>
+  <div>
+    <label>Password</label>
+    <input type="password" name="password" />
+  </div>
+
+  <div>
+    <label>phone Number</label>
+    <input type=" Number" name="phoneNumber" />
+  </div>
+
+  <input type="submit" />
 </form>
