--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,53 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project-2 | eastFood</title>
-     <!-- Google Fonts -->
-     <link rel="preconnect" href="https://fonts.googleapis.com" />
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-     <link
-       href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Nunito:wght@400;700;900&display=swap"
-       rel="stylesheet"
-     />
-     <!-- CSS Sheet -->
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Nunito:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CSS Sheet -->
     <link rel="stylesheet" href="../css/main.css" />
-
-</head>
-<body>
-    
-
+  </head>
+  <body>
     <nav>
-        <div>
-            <h1>eastFood</h1>
-       </div>
-       
-       <div class="rt">
-           
-           <% if (currentUser) {%>
-            
-            <a href="/auth/logout">log Out</a>
-            <% currentUser.firstName %>
-            
-            <% } else { %>
-                <a href="/auth/signup"> <h3>Sign Up</h3>  </a>
-                <a href="/auth/signin"> <h3>Sign In</h3>    </a>
-  
-
-             <% } %>
-       </div>
-    </nav>
-
-
-  
-
-<%-body%>
-
-      <div id="footer">
-        <p>© eastFood</p>
+      <div>
+        <h1>eastFood</h1>
       </div>
 
-</body>
+      <div class="rt">
+        <% if (currentUser) {console.log(currentUser)%>
+        <a href="/auth/logout">log Out</a>
+        <% currentUser.firstName %> <% } else { %>
+        <a href="/auth/signup"> <h3>Sign Up</h3> </a>
+        <a href="/auth/signin"> <h3>Sign In</h3> </a>
+
+        <% } %>
+      </div>
+    </nav>
+
+    <%-body%>
+
+    <div id="footer">
+      <p>© eastFood</p>
+    </div>
+  </body>
 </html>
