--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,7 @@ body {
     font-family: "Nunito", sans-serif;
     font-weight: 700;
     margin: 0;
+    background-color: rgb(243, 185, 143);
   }
   nav {
     display: flex;
@@ -89,3 +90,4 @@ body {
     font-size: small;
     font-weight: 100;
   }
+  
