--- a/views/Drinks/drinks.ejs
+++ b/views/Drinks/drinks.ejs
@@ -7,8 +7,8 @@
     <div class="box b-1">
       <div class="in-cards">
         <div>
-          <h3>Kunaffa</h3>
-          <p>price: 1.400 BD</p>
+          <h3>Pupsi</h3>
+          <p>price: 0.500 BD</p>
         </div>
       </div>
     </div>
@@ -16,8 +16,8 @@
     <div class="box b-2">
       <div class="in-cards">
         <div>
-          <h3>Basbosa</h3>
-          <p>price: 1.200 BD</p>
+          <h3>Pupsi Diet</h3>
+          <p>price: 0.500 BD</p>
         </div>
       </div>
     </div>
@@ -25,8 +25,8 @@
     <div class="box b-3">
       <div class="in-cards">
         <div>
-          <h3>Baqlawa</h3>
-          <p>price: 1.800 BD</p>
+          <h3>orange juice</h3>
+          <p>price: 1.100 BD</p>
         </div>
       </div>
     </div>
@@ -50,8 +50,8 @@
     <div class="box b-1">
       <div class="in-cards">
         <div>
-          <h3>Kunaffa</h3>
-          <p>price: 1.400 BD</p>
+          <h3>Banana Juice</h3>
+          <p>price: 1.100 BD</p>
         </div>
       </div>
     </div>
@@ -59,8 +59,8 @@
     <div class="box b-2">
       <div class="in-cards">
         <div>
-          <h3>Basbosa</h3>
-          <p>price: 1.200 BD</p>
+          <h3>majeto mix burry</h3>
+          <p>price: 2.200 BD</p>
         </div>
       </div>
     </div>
@@ -68,7 +68,7 @@
     <div class="box b-3">
       <div class="in-cards">
         <div>
-          <h3>Baqlawa</h3>
+          <h3>Majito pomegranate</h3>
           <p>price: 1.800 BD</p>
         </div>
       </div>
