--- a/views/mainDishes/mainDishes.ejs
+++ b/views/mainDishes/mainDishes.ejs
@@ -7,8 +7,13 @@
     <div class="box b-1">
       <div class="in-cards">
         <div>
-          <h3>Kunaffa</h3>
-          <p>price: 1.400 BD</p>
+          <h3> Maharaja Chicken Biryani</h3>
+          <p> <select>
+            <option value="price">price</option>
+            <option value="price"> 1 Person-2.000 BHD</option>
+            <option value="price"> 2 Persons-3.600 BHD</option>
+            <option value="price"> 4 Persons-5.500 BHD</option>
+        </select></p>
         </div>
       </div>
     </div>
@@ -16,7 +21,7 @@
     <div class="box b-2">
       <div class="in-cards">
         <div>
-          <h3>Basbosa</h3>
+          <h3>Chicken With Rice</h3>
           <p>price: 1.200 BD</p>
         </div>
       </div>
@@ -25,7 +30,7 @@
     <div class="box b-3">
       <div class="in-cards">
         <div>
-          <h3>Baqlawa</h3>
+          <h3>Mini Italy</h3>
           <p>price: 1.800 BD</p>
         </div>
       </div>
@@ -50,7 +55,7 @@
     <div class="box b-1">
       <div class="in-cards">
         <div>
-          <h3>Kunaffa</h3>
+          <h3>Chicken Kebab</h3>
           <p>price: 1.400 BD</p>
         </div>
       </div>
@@ -59,8 +64,8 @@
     <div class="box b-2">
       <div class="in-cards">
         <div>
-          <h3>Basbosa</h3>
-          <p>price: 1.200 BD</p>
+          <h3>Chilo Kebab With Rice</h3>
+          <p>price: 2.700 BD</p>
         </div>
       </div>
     </div>
@@ -68,8 +73,8 @@
     <div class="box b-3">
       <div class="in-cards">
         <div>
-          <h3>Baqlawa</h3>
-          <p>price: 1.800 BD</p>
+          <h3>Family Lamb Shank Meal</h3>
+          <p>price: 14.5 BD</p>
         </div>
       </div>
     </div>
@@ -89,3 +94,7 @@
     </div>
   </div>
 </div>
+
+
+
+
