fixed few typos and added on logo click redirects to homepage

--- a/views/Drinks/drinks.ejs
+++ b/views/Drinks/drinks.ejs
@@ -7,7 +7,7 @@
     <div class="box b-1">
       <div class="in-cards">
         <div>
-          <h3>Pupsi</h3>
+          <h3>Pepsi</h3>
           <p>price: 0.500 BD</p>
         </div>
       </div>
@@ -16,7 +16,7 @@
     <div class="box b-2">
       <div class="in-cards">
         <div>
-          <h3>Pupsi Diet</h3>
+          <h3>Pepsi Diet</h3>
           <p>price: 0.500 BD</p>
         </div>
       </div>
@@ -25,7 +25,7 @@
     <div class="box b-3">
       <div class="in-cards">
         <div>
-          <h3>orange juice</h3>
+          <h3>Orange Juice</h3>
           <p>price: 1.100 BD</p>
         </div>
       </div>
@@ -59,7 +59,7 @@
     <div class="box b-2">
       <div class="in-cards">
         <div>
-          <h3>majeto mix burry</h3>
+          <h3>Majito Mix Berry</h3>
           <p>price: 2.200 BD</p>
         </div>
       </div>
@@ -68,7 +68,7 @@
     <div class="box b-3">
       <div class="in-cards">
         <div>
-          <h3>Majito pomegranate</h3>
+          <h3>Majito Pomegranate</h3>
           <p>price: 1.800 BD</p>
         </div>
       </div>
