--- a/views/auth/signin.ejs
+++ b/views/auth/signin.ejs
@@ -1,14 +1,13 @@
-<h3>>Sign in  to plase yoer ordeer </h3>
-
+<h3>Sign in to place your order</h3>
 
 <form method="POST" action="/auth/signin">
-    <div>
-        <label>Email Address </label>
-        <input type="email" name="emailAddress">
-    </div>
-    <div>
-        <label>Password</label>
-        <input type="password" name="password">
-    </div>
-    <input type="submit">
-</form> 
+  <div>
+    <label>Email Address </label>
+    <input type="email" name="emailAddress" />
+  </div>
+  <div>
+    <label>Password</label>
+    <input type="password" name="password" />
+  </div>
+  <input type="submit" />
+</form>
