--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -19,7 +19,7 @@
   </div>
 
   <div>
-    <label>phone Number</label>
+    <label>Phone Number</label>
     <input type=" Number" name="phoneNumber" />
   </div>
 
