--- a/views/mainDishes/mainDishes.ejs
+++ b/views/mainDishes/mainDishes.ejs
@@ -7,13 +7,15 @@
     <div class="box b-1">
       <div class="in-cards">
         <div>
-          <h3> Maharaja Chicken Biryani</h3>
-          <p> <select>
-            <option value="price">price</option>
-            <option value="price"> 1 Person-2.000 BHD</option>
-            <option value="price"> 2 Persons-3.600 BHD</option>
-            <option value="price"> 4 Persons-5.500 BHD</option>
-        </select></p>
+          <h3>Maharaja Chicken Biryani</h3>
+          <p>
+            <select>
+              <option value="price">price</option>
+              <option value="price">1 person-2.000 BHD</option>
+              <option value="price">2 people-3.600 BHD</option>
+              <option value="price">4 people-5.500 BHD</option>
+            </select>
+          </p>
         </div>
       </div>
     </div>
@@ -94,7 +96,3 @@
     </div>
   </div>
 </div>
-
-
-
-
