--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,7 +18,7 @@
   <body>
     <nav>
       <div>
-        <h1>eastFood</h1>
+        <h1><a href="/">eastFood</a></h1>
       </div>
 
       <div class="rt">
