--- a/public/main.css
+++ b/public/main.css
@@ -60,17 +60,17 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
 }
-  b-4{
+.b-4{
     background-image: url("https://nectarsapp.s3.me-south-1.amazonaws.com/media/606f1acdcd2483697904a75f/item/Banana_Juice1631093460839");
     background-repeat: no-repeat;
     background-size: cover;
 }
-b-5 {
+.b-5 {
   background-image: url("https://www.google.com/imgres?imgurl=http%3A%2F%2Fwww.completecocktails.com%2Fimg%2Fd%2Fl%2FMixedBerryMojito.png&tbnid=GZukxa0_MJ0h_M&vet=12ahUKEwjg-bbrmLv_AhWlmScCHaHYCc4QMyg5egQIARBZ..i&imgrefurl=http%3A%2F%2Fwww.completecocktails.com%2FDrinks%2FMixedBerryMojito.aspx&docid=_LNbzjUKgYoS_M&w=142&h=232&q=mojito%20mix%20berry&ved=2ahUKEwjg-bbrmLv_AhWlmScCHaHYCc4QMyg5egQIARBZ");
   background-repeat: no-repeat;
   background-size: cover;
 }
-b-6 {
+.b-6 {
   background-image: url("https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.biotona.be%2Fwp-content%2Fuploads%2Fpomegranate-mojito-web-4.jpg&tbnid=5v4Nklgw8y5BcM&vet=12ahUKEwjN0-ePmbv_AhVRpycCHU5TDZwQMygDegUIARDfAQ..i&imgrefurl=https%3A%2F%2Fwww.biotona.be%2Fen%2Fblog%2Frecipes%2Fpomegranate-mojito%2F&docid=kQZIRGgYLPicoM&w=1701&h=3023&q=mojito%20pomegranate&ved=2ahUKEwjN0-ePmbv_AhVRpycCHU5TDZwQMygDegUIARDfAQ");
   background-repeat: no-repeat;
   background-size: cover;
