--- a/views/Drinks/drinks.ejs
+++ b/views/Drinks/drinks.ejs
@@ -4,7 +4,7 @@
     <p>Explore 19 Melbourne neighborhoods. Which are right for you?</p>
   </div>
   <div class="cards">
-    <div class="box b-1">
+    <div class="b-1">
       <div class="in-cards">
         <div>
           <h3>Pupsi</h3>
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    <div class="box b-2">
+    <div class="b-2">
       <div class="in-cards">
         <div>
           <h3>Pupsi Diet</h3>
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <div class="box b-3">
+    <div class="b-3">
       <div class="in-cards">
         <div>
           <h3>orange juice</h3>
@@ -47,7 +47,7 @@
   </div>
 
   <div class="cards">
-    <div class="box b-4">
+    <div class="b-4">
       <div class="in-cards">
         <div>
           <h3>Banana Juice</h3>
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <div class="box b-5">
+    <div class="b-5">
       <div class="in-cards">
         <div>
           <h3>majeto mix burry</h3>
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="box b-6">
+    <div class="b-6">
       <div class="in-cards">
         <div>
           <h3>Majito pomegranate</h3>
