--- a/views/mainDishes/mainDishes.ejs
+++ b/views/mainDishes/mainDishes.ejs
@@ -4,7 +4,7 @@
       <p>Explore 19 Melbourne neighborhoods. Which are right for you?</p>
     </div>
     <div class="cards">
-      <div class="box b-001">
+      <div class="b-001">
         <div class="in-cards">
           <div>
             <h3> Maharaja Chicken Biryani</h3>
@@ -18,7 +18,7 @@
         </div>
       </div>
   
-      <div class="box b-002">
+      <div class="b-002">
         <div class="in-cards">
           <div>
             <h3>Chicken With Rice</h3>
@@ -27,7 +27,7 @@
         </div>
       </div>
   
-      <div class="box b-003">
+      <div class="b-003">
         <div class="in-cards">
           <div>
             <h3>Mini Italy</h3>
@@ -52,7 +52,7 @@
     </div>
   
     <div class="cards">
-      <div class="box b-004">
+      <div class="b-004">
         <div class="in-cards">
           <div>
             <h3>Chicken Kebab</h3>
@@ -61,7 +61,7 @@
         </div>
       </div>
   
-      <div class="box b-005">
+      <div class="b-005">
         <div class="in-cards">
           <div>
             <h3>Chilo Kebab With Rice</h3>
@@ -70,7 +70,7 @@
         </div>
       </div>
   
-      <div class="box b-006">
+      <div class="b-006">
         <div class="in-cards">
           <div>
             <h3>Family Lamb Shank Meal</h3>
