--- a/views/Desserts/desserts.ejs
+++ b/views/Desserts/desserts.ejs
@@ -4,7 +4,7 @@
     <p>Explore 19 Melbourne neighborhoods. Which are right for you?</p>
   </div>
   <div class="cards">
-    <div class="box b-01">
+    <div class="b-01">
       <div class="in-cards">
         <div>
           <h3>Kunaffa</h3>
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    <div class="box b-02">
+    <div class="b-02">
       <div class="in-cards">
         <div>
           <h3>Basbosa</h3>
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <div class="box b-03">
+    <div class="b-03">
       <div class="in-cards">
         <div>
           <h3>Baqlawa</h3>
