--- a/views/profile/user.ejs
+++ b/views/profile/user.ejs
@@ -1,17 +1,15 @@
 <h3>Profile</h3>
 
-<table>
+<table class="Profile-t">
     <tr>
         <th>First Name</th>
         <th>Last Name</th>
         <th>Email Address</th>
     </tr>
     <tr>
-        <td>
-        </td>
-        <td><%= currentUser.firstName %></td>
-        <td><%= currentUser.lastName %></td>
-        <td><%= currentUser.emailAddress %></td>
+        <td class="td-profile"><%= currentUser.firstName %></td>
+        <td class="td-profile"><%= currentUser.lastName %></td>
+        <td class="td-profile"><%= currentUser.emailAddress %></td>
         <td>
           </form>
           <a href="/user/edit?id=<%= currentUser._id %>">UPDATE</a>
