--- a/views/mainDishes/mainDishes.ejs
+++ b/views/mainDishes/mainDishes.ejs
@@ -19,16 +19,15 @@
         </div>
       </div>
     </div>
-
     <div class="box b-22">
       <div class="in-cards">
         <div>
           <h3>Chicken With Rice</h3>
           <p>price: 2.100 BD</p>
+          <a href="/cart">Add To Cart</a>
         </div>
       </div>
     </div>
-
     <div class="box b-23">
       <div class="in-cards">
         <div>
