--- a/views/Drinks/drinks.ejs
+++ b/views/Drinks/drinks.ejs
@@ -4,7 +4,7 @@
     <p>Explore 19 Melbourne neighborhoods. Which are right for you?</p>
   </div>
   <div class="cards">
-    <div class="box b-31">
+    <div class="box drinks-1">
       <div class="in-cards">
         <div>
           <h3>Pepsi</h3>
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    <div class="box b-32">
+    <div class="box drinks-2">
       <div class="in-cards">
         <div>
           <h3>Pepsi Diet</h3>
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <div class="box b-33">
+    <div class="box drinks-3">
       <div class="in-cards">
         <div>
           <h3>Orange Juice</h3>
@@ -47,7 +47,7 @@
   </div>
 
   <div class="cards">
-    <div class="box b-34">
+    <div class="box drinks-4">
       <div class="in-cards">
         <div>
           <h3>Banana Juice</h3>
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <div class="box b-35">
+    <div class="box drinks-5">
       <div class="in-cards">
         <div>
           <h3>Mojito Mix Berry</h3>
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="box b-36">
+    <div class="box drinks-6">
       <div class="in-cards">
         <div>
           <h3>Mojito Pomegranate</h3>
