--- a/views/mainDishes/mainDishes.ejs
+++ b/views/mainDishes/mainDishes.ejs
@@ -4,7 +4,7 @@
     <p>Explore 19 Melbourne neighborhoods. Which are right for you?</p>
   </div>
   <div class="cards">
-    <div class="box b-21">
+    <div class="box mainDishes-1">
       <div class="in-cards">
         <div>
           <h3>Maharaja Chicken Biryani</h3>
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <div class="box b-22">
+    <div class="box mainDishes-2">
       <div class="in-cards">
         <div>
           <h3>Chicken With Rice</h3>
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <div class="box b-23">
+    <div class="box mainDishes-3">
       <div class="in-cards">
         <div>
           <h3>Mini Italy</h3>
@@ -54,7 +54,7 @@
   </div>
 
   <div class="cards">
-    <div class="box b-24">
+    <div class="box mainDishes-4">
       <div class="in-cards">
         <div>
           <h3>Chicken Kebab</h3>
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <div class="box b-25">
+    <div class="box mainDishes-5">
       <div class="in-cards">
         <div>
           <h3>Chilo Kebab With Rice</h3>
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <div class="box b-26">
+    <div class="box mainDishes-6">
       <div class="in-cards">
         <div>
           <h3>Family Lamb Shank Meal</h3>
