google signup and change password

--- a/views/auth/signin.ejs
+++ b/views/auth/signin.ejs
@@ -11,3 +11,7 @@
   </div>
   <input type="submit" />
 </form>
+
+<div>
+  <a href="http://localhost:3000/auth/google/secrets">SignUp Using GOOGLE </a>
+</div>
