--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -25,3 +25,7 @@
 
   <input type="submit" />
 </form>
+
+<div>
+  <a href="http://localhost:3000/auth/google/secrets">SignUp Using GOOGLE </a>
+</div>
