--- a/views/profile/changePass.ejs
+++ b/views/profile/changePass.ejs
@@ -1,18 +1,17 @@
 
 <h3> Change Password </h3>
 
+
 <form method="POST" action="/user/Change"> 
 
     <div>
-        <label>new Password</label>
-        <input type="password" name="newPassword" required>
+        <label>current Password</label>
+        <input type="password" name="currentPassword" required>
     </div>
     <div>
         <label>confirm new Password</label>
         <input type="password" name="confirmPassword" required>
     </div>
 
-
-    <!-- <input type="hidden" name ="id" value="<%=currentUser._id%>"> -->
     <input type="submit">
 </form>
