added upload pruducts -and add cart but still not working

--- a/views/Upload/upload.ejs
+++ b/views/Upload/upload.ejs
@@ -2,11 +2,11 @@
 <form action="/upload" enctype="multipart/form-data" method="POST">
    <div>
     <label>Product Name</label>
-    <input type="text" name="name" required>
+    <input type="text" name="name" >
    </div>
    <div>
     <label>Product Price</label>
-    <input type="number" name="price" required>
+    <input type="number" name="price" >
    </div>
    <div>
     <label>Description</label>
@@ -14,7 +14,7 @@
    </div>
    <div>
     <label>Product Image</label>
-    <input type="file" name="image"  accept="image/*" required>
+    <input type="file" name="image"  accept="image/*" >
     <input type="submit" value="Upload Photo">
    </div>
 </form>
