--- a/views/Product/product.ejs
+++ b/views/Product/product.ejs
@@ -1,38 +1,43 @@
-<form action="/products" method="POST">
+<form action="/products" method="POST" enctype="multipart/form-data">
     <h1>Products Page</h1>
     <% products.forEach((product) => { %>
-<div>
-    <%=product.img%>
-    <div>
-<h3> <%=product.name%></h3>
-<p>Price =<%=product.price%>BD</p>
-<p><%=product.desc%></p>
-<button onclick="addToCart('<%= product._id %>')">Add to Cart</button>
-
-</div>
-<% }) %>
+        <div>
+          <div>
+            <%= product.img %>
+            <img src="../uploads/<%= product.img %>">
+            <h3><%= product.name %></h3>
+            <p>Price = <%= product.price %>BD</p>
+            <p><%= product.desc %></p>
+            <button onclick="addToCart('<%= product._id %>')">Add to Cart</button>
+          </div>
+        </div>
+      <% }) %>
     </div>
 
     
-    <script>
-        function addToCart(productsId) {
-          fetch('/cart', {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ productsId })
-          })
-          .then(response => {
-            if (response.ok) {
-              alert('Item added to cart');
-            } else {
-              console.error('Failed to add item to cart.');
-            }
-          })
-          .catch(error => {
-            console.error(error);
-          });
+    <!-- <script>
+    function addToCart(productId) {
+        console.log(productId)
+
+    fetch('/cart', {
+        method: 'POST',
+        headers: {
+        'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ productId }) // Send productId instead of productsId
+        
+    })
+    console.log(productId)
+    .then(response => {
+        if (response.ok) {
+        alert('Item added to cart');
+        } else {
+        console.error('Failed to add item to cart.');
         }
-      </script>
+    })
+    .catch(error => {
+        console.error(error);
+    });
+    }
+      </script> -->
 </form>
