adding details page & CART ALMOST DONE

--- a/views/Product/details.ejs
+++ b/views/Product/details.ejs
@@ -1,29 +1,44 @@
-<!-- <form method="POST" action="/details">
 <div>
-    <h2></h2>
-<h2></h2>
-<button onclick="addToCart(')">Add to Cart</button>
+    <h3><%= product.name %></h3>
+    <p>Price = <%= product.price %>BD</p>
+    <p><%= product.desc %></p>
+    <button onclick="addToCart('<%= product._id %>')">Add to Cart</button>
+  </div>
+  <script>
 
-</div>
-<script>
-    function addToCart(productsId) {
-      fetch('/cart', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ productsId })
-      })
-      .then(response => {
-        if (response.ok) {
-          alert('Item added to cart');
-        } else {
-          console.error('Failed to add item to cart.');
-        }
-      })
-      .catch(error => {
-        console.error(error);
-      });
-    }
+  function addToCart(productId) {
+  console.log(productId);
+
+  // Get existing cart data from local storage
+  let cartData = localStorage.getItem('cart');
+  let cartItems = [];
+
+  if (cartData) {
+    cartItems = JSON.parse(cartData);
+  }
+
+  // Create product object
+  let product = {
+    productId: productId,
+    quantity: 1, // You can set an initial quantity here
+  };
+
+  // Add product to cart items
+  cartItems.push(product);
+
+  // Update local storage
+  localStorage.setItem('cart', JSON.stringify(cartItems));
+
+  alert('Item added to cart');
+}
+function displayCart() {
+  let cartData = localStorage.getItem('cart');
+  let cartItems = [];
+
+  if (cartData) {
+    cartItems = JSON.parse(cartData);
+  }
+
+}
+
   </script>
-  </form> -->
