added styling for all pages + added admin page

--- a/views/Desserts/desserts.ejs
+++ b/views/Desserts/desserts.ejs
@@ -1,7 +1,6 @@
 <div id="mid-section">
   <div class="mid-section-header">
     <h2>Desserts</h2>
-    <p>Explore 19 Melbourne neighborhoods. Which are right for you?</p>
   </div>
   <div class="cards">
     <div class="box desserts-1">
@@ -31,18 +30,8 @@
       </div>
     </div>
   </div>
-  <div class="cards-bottom">
-    <div class="cb-1">
-      <p>Hip Terrace Houses Anything Goes Vintage Clothing</p>
-    </div>
-    <div class="cb-1">
-      <p>Cake Shops Backpackers Hippies Beach Culture</p>
-    </div>
-    <div class="cb-1">
-      <p>
-        Coffee Culture Working Nine To Five Federation Square Flinders Street
-        Station
-      </p>
-    </div>
-  </div>
+</div>
+
+<div id="footer">
+  <p>© eastFood</p>
 </div>
