--- a/views/mainDishes/mainDishes.ejs
+++ b/views/mainDishes/mainDishes.ejs
@@ -1,21 +1,13 @@
 <div id="mid-section">
   <div class="mid-section-header">
     <h2>Main Dishes</h2>
-    <p>Explore 19 Melbourne neighborhoods. Which are right for you?</p>
   </div>
   <div class="cards">
     <div class="box mainDishes-1">
       <div class="in-cards">
         <div>
           <h3>Maharaja Chicken Biryani</h3>
-          <p>
-            <select>
-              <option value="price">price</option>
-              <option value="price">1 person-2.000 BHD</option>
-              <option value="price">2 people-3.600 BHD</option>
-              <option value="price">4 people-5.500 BHD</option>
-            </select>
-          </p>
+          <p>price: 2.700 BD</p>
         </div>
       </div>
     </div>
@@ -36,20 +28,6 @@
           <p>price: 3.400 BD</p>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="cards-bottom">
-    <div class="cb-1">
-      <p>Hip Terrace Houses Anything Goes Vintage Clothing</p>
-    </div>
-    <div class="cb-1">
-      <p>Cake Shops Backpackers Hippies Beach Culture</p>
-    </div>
-    <div class="cb-1">
-      <p>
-        Coffee Culture Working Nine To Five Federation Square Flinders Street
-        Station
-      </p>
     </div>
   </div>
 
@@ -81,18 +59,8 @@
       </div>
     </div>
   </div>
-  <div class="cards-bottom">
-    <div class="cb-1">
-      <p>Hip Terrace Houses Anything Goes Vintage Clothing</p>
-    </div>
-    <div class="cb-1">
-      <p>Cake Shops Backpackers Hippies Beach Culture</p>
-    </div>
-    <div class="cb-1">
-      <p>
-        Coffee Culture Working Nine To Five Federation Square Flinders Street
-        Station
-      </p>
-    </div>
-  </div>
+</div>
+
+<div id="footer">
+  <p>© eastFood</p>
 </div>
