--- a/views/profile/edit.ejs
+++ b/views/profile/edit.ejs
@@ -1,26 +1,39 @@
-<h3>Edit Profile</h3>
+<h2 style="margin: 30px auto">Edit Profile</h2>
 
-<form method="POST" action="/user/edit"> 
-    <div>
-        <label>First Name</label>
-        <input type="text" name="firstName" value="<%= currentUser.firstName %>">
-    </div>
+<form method="POST" action="/user/edit" style="top: 510px">
+  <div>
+    <label>First Name</label>
+    <input type="text" name="firstName" value="<%= currentUser.firstName %>" />
+  </div>
+  <br />
 
-    <div>
-        <label>Last Name</label>
-        <input type="text" name="lastName" value="<%= currentUser.lastName %>">
-    </div>
+  <div>
+    <label>Last Name</label>
+    <input type="text" name="lastName" value="<%= currentUser.lastName %>" />
+  </div>
+  <br />
 
-    <div>
-        <label>Email Address</label>
-        <input type="text" name="emailAddress" value="<%= currentUser.emailAddress %>">
-    </div>
+  <div>
+    <label>Email</label>
+    <input
+      type="text"
+      name="emailAddress"
+      value="<%= currentUser.emailAddress %>"
+    />
+  </div>
+  <br />
+  <div>
+    <label>Password</label>
+    <input type="text" name="password" value="**********" />
+  </div>
 
-    <div>
-        <label>Password</label>
-        <input type="text" name="password" value="<%= currentUser.password %>">
-    </div>
-
-    <input type="hidden" name ="id" value="<%=currentUser._id%>">
-    <input type="submit">
+  <input type="hidden" name="id" value="<%=currentUser._id%>" />
+  <br />
+  <div class="inputGroup inputGroup3">
+    <button id="login" type="submit">Edit</button>
+  </div>
 </form>
+
+<div id="footer" style="position: relative; top: 670px">
+  <p>© eastFood</p>
+</div>
